# todel

./: .env  .gitignore  Cargo.toml  README.md  sqlx-data.json
.github/workflows/: ci.yml
src/: conf.rs  files.rs  gateway.rs  info.rs  lib.rs  messages.rs  response.rs  sessions.rs  users.rs
src/conf/: :w  effis.rs  effis_ratelimits.rs  mod.rs  oprish.rs  oprish_ratelimits.rs  pandemonium.rs
src/http/: client_ip.rs  mod.rs  response.rs
src/ids/: mod.rs
src/models/: files.rs  gateway.rs  info.rs  messages.rs  mod.rs  ratelimits.rs  response.rs
src/oprish/: mod.rs
