[package]
name = "todel"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
lazy_static = { version = "1.4.0", optional = true }
log = "0.4.17"
rocket = { version = "0.5.0-rc.2", optional = true, features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_with = "2.1.0"
toml = { version = "0.5.9", optional = true }

[features]
default = ["logic"]
logic = ["dep:toml", "dep:lazy_static"]
http = ["logic", "dep:rocket"]
