[package]
name = "todel"
version = "0.4.0-alpha1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_with = "3.0.0"
ubyte = { version = "0.10.3", features = ["serde"] }
